force-app/main/default/objects/NVLR_Flight__c/NVLR_Flight__c.object-meta.xml
<CustomObject>
    <label>Flight</label>
    <nameField>
        <displayFormat>FLIGHT{0000}</displayFormat>
        <label>Flight Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>