force-app/main/default/objects/NVLR_Flight__c/fields/Arrival_Airport__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Airport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Arrival airport</label>
    <referenceTo>NVLR_Airport__c</referenceTo>
    <relationshipLabel>Arrivals</relationshipLabel>
    <relationshipName>To_Flights</relationshipName>
    <type>Lookup</type>
</CustomField>