force-app/main/default/objects/NVLR_Flight__c/fields/Departure_Airport__c.field-meta.xml
<CustomField>
    <fullName>Departure_Airport__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Departure airport</label>
    <referenceTo>NVLR_Airport__c</referenceTo>
    <relationshipLabel>Departures</relationshipLabel>
    <relationshipName>Froms</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>