force-app/main/default/objects/NVLR_Flight__c/fields/Distance__c.field-meta.xml
<CustomField>
    <fullName>Distance__c</fullName>
    <label>Distance in Km</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>